add jdelman.me to nginx conf

--- a/_nginx/potato.conf
+++ b/_nginx/potato.conf
@@ -31,7 +31,7 @@ http {
 
   server {
     listen 443;
-    server_name ;
+    server_name jdelman.me;
     keepalive_timeout 5;
     client_max_body_size 4G;
 
